v101
    -lstm +1 apm
    -in ContextMap2 add another input from run lenght
    -in ContextMap2 allow to select individual inputs for mixer
    -change option -e:
        -e0 - on text file do only capital letter conversion and escapes (file will be larger)
        -eX - where X > 0 use as minimum dynamic word frequency.
              -e19 recomended for files >1MB, -e124 for <1MB
              if wrt file is larger from source then transform is ignored
        -eX,dictionary - X selects frequency for words in dictionary file,
                         dynamic word frequency is fixed (-e19 files >1MB, -e124  <1MB)
        -e  - defaults to -e19
    -change wrt
    -remove model creation from predictors and add to main base predictor class
    -change exe, im24, indirect models
    -some cleanup
v100
    -add lstm model back (active on -x option)
        -used on all predictors exept audio
    -add matchModel from paq8px_v201 as second model
    -adjust old matchModel parameters
    -tar header as bintext
    -add back 1 mixer context if DECA
    -in sparsemodel (default) add 2 contexts
    -adjust normalModel
v99
    -xml/html like content processed separately in wordmodel
    -adjust some wordmodel parameters
    -attempt to detect ISO latin text
    -some changes in detection (cleanup)
v98
    -change BZip2 detection, test transform correctly
    -if in tar output filename
v97
    -fix tar detection (BZip2 to agressive)
v96
    -add some context from paq8pxd_v200 sparse model
    -adjust DEC Alpha predictor/model
    -do BZip2 recompression
v95
    -jpeg model: 
         -more context in Map1  (20)
         -more inputs from main context
         -2 main mixer inputs + 1 apm
         -cleanup
v94
    -change jpeg model
    -fix/change detection (tiff,text)
v93
    -change jpeg model
v92
    - small fixes
    - small adjustments
    - detect pdf CMYK and force as IMAGE32
v91
    - fix jpeg compression on larger levels
    - fix SZDD recompression (fail if error)